--- a/Figures/PlotNeuralNet-master/examples/Unet/Unet.tex
+++ b/Figures/PlotNeuralNet-master/examples/Unet/Unet.tex
@@ -4,13 +4,13 @@
 \subimport{../../layers/}{init}
 \usetikzlibrary{positioning}
 
-\def\ConvColor{rgb:yellow,5;red,2.5;white,5}
-\def\ConvReluColor{rgb:yellow,5;red,5;white,5}
-\def\PoolColor{rgb:red,1;black,0.3}
-\def\UnpoolColor{rgb:blue,2;green,1;black,0.3}
+\def\ConvColor{}
+\def\ConvReluColor{}
+\def\PoolColor{}
+\def\UnpoolColor{}
 \def\FcColor{rgb:blue,5;red,2.5;white,5}
 \def\FcReluColor{rgb:blue,5;red,5;white,4}
-\def\SoftmaxColor{rgb:magenta,5;black,7}
+\def\SoftmaxColor{}
 
 
 \newcommand{\copymidarrow}{\tikz \draw[-Stealth,line width =0.8mm,draw={rgb:blue,4;red,1;green,1;black,3}] (-0.3,0) -- ++(0.3,0);}
