--- a/PaPer/our paper.tex
+++ b/PaPer/our paper.tex
@@ -160,6 +160,6 @@ Here are two sample references: \cite{Feynman1963118,Dirac1953888}.
 
 \section*{References}
 
-\bibliography{mybib}
+\bibliography{mybibfile}
 
 \end{document}
