--- a/Capsule Network/Capsule-Network-Tutorial-master/Capsule Network.ipynb
+++ b/Capsule Network/Capsule-Network-Tutorial-master/Capsule Network.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -17,15 +15,13 @@
     "from torch.optim import Adam\n",
     "from torchvision import datasets, transforms\n",
     "\n",
-    "USE_CUDA = True"
+    "USE_CUDA = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Mnist:\n",
@@ -44,10 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ConvLayer(nn.Module):\n",
@@ -66,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class PrimaryCaps(nn.Module):\n",
@@ -94,10 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DigitCaps(nn.Module):\n",
@@ -143,10 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
@@ -180,10 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class CapsNet(nn.Module):\n",
@@ -224,10 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "capsule_net = CapsNet()\n",
@@ -238,47 +222,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "0it [00:00, ?it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train accuracy: 0.12\n",
-      "train accuracy: 0.9\n",
-      "train accuracy: 0.94\n",
-      "train accuracy: 0.96\n",
-      "train accuracy: 0.99\n",
-      "train accuracy: 0.96\n",
-      "0.229411779922\n",
-      "test accuracy: 0.96\n",
-      "0.0547490972094\n",
-      "train accuracy: 0.98\n",
-      "train accuracy: 0.98\n",
-      "train accuracy: 0.99\n",
-      "train accuracy: 0.99\n",
-      "train accuracy: 1.0\n",
-      "train accuracy: 0.99\n",
-      "0.0456192491871\n",
-      "test accuracy: 0.98\n",
-      "0.0390225026663\n",
-      "train accuracy: 0.99\n",
-      "train accuracy: 0.99\n",
-      "train accuracy: 1.0\n"
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-133-f33ca0acefd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mtrain_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbatch_id\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 9904128/9912422 [00:17<00:00, 791524.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/28881 [00:00<?, ?it/s]\u001b[A\n",
+      " 57%|█████▋    | 16384/28881 [00:00<00:00, 43273.41it/s]\u001b[A\n",
+      "32768it [00:00, 34489.79it/s]                           \u001b[A\n",
+      "0it [00:00, ?it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/1648877 [00:00<?, ?it/s]\u001b[A\n",
+      "  1%|          | 16384/1648877 [00:01<00:34, 46954.29it/s]\u001b[A\n",
+      "  2%|▏         | 40960/1648877 [00:01<00:30, 53576.81it/s]\u001b[A\n",
+      "  6%|▌         | 98304/1648877 [00:01<00:22, 68097.25it/s]\u001b[A\n",
+      "  9%|▉         | 155648/1648877 [00:01<00:17, 87166.15it/s]\u001b[A\n",
+      " 12%|█▏        | 204800/1648877 [00:01<00:12, 115493.50it/s]\u001b[A\n",
+      " 14%|█▍        | 229376/1648877 [00:02<00:10, 130890.47it/s]\u001b[A\n",
+      " 16%|█▋        | 270336/1648877 [00:02<00:09, 143307.01it/s]\u001b[A\n",
+      " 20%|██        | 335872/1648877 [00:02<00:07, 169127.35it/s]\u001b[A\n",
+      " 24%|██▍       | 401408/1648877 [00:02<00:06, 193511.09it/s]\u001b[A\n",
+      " 28%|██▊       | 466944/1648877 [00:02<00:05, 215387.27it/s]\u001b[A\n",
+      " 33%|███▎      | 540672/1648877 [00:03<00:04, 240232.68it/s]\u001b[A\n",
+      " 37%|███▋      | 614400/1648877 [00:03<00:04, 257743.85it/s]\u001b[A\n",
+      " 42%|████▏     | 696320/1648877 [00:03<00:03, 281755.78it/s]\u001b[A\n",
+      " 47%|████▋     | 778240/1648877 [00:03<00:02, 301032.72it/s]\u001b[A\n",
+      " 52%|█████▏    | 860160/1648877 [00:04<00:02, 335835.28it/s]\u001b[A\n",
+      " 57%|█████▋    | 942080/1648877 [00:04<00:01, 393688.50it/s]\u001b[A\n",
+      " 60%|██████    | 991232/1648877 [00:04<00:01, 361297.45it/s]\u001b[A\n",
+      " 64%|██████▎   | 1048576/1648877 [00:04<00:01, 358603.63it/s]\u001b[A\n",
+      " 69%|██████▉   | 1138688/1648877 [00:04<00:01, 421023.86it/s]\u001b[A\n",
+      " 72%|███████▏  | 1187840/1648877 [00:04<00:01, 375950.07it/s]\u001b[A\n",
+      " 76%|███████▌  | 1253376/1648877 [00:04<00:01, 385923.20it/s]\u001b[A\n",
+      " 82%|████████▏ | 1351680/1648877 [00:05<00:00, 455860.38it/s]\u001b[A\n",
+      " 85%|████████▌ | 1409024/1648877 [00:05<00:00, 413586.24it/s]\u001b[A\n",
+      " 90%|████████▉ | 1482752/1648877 [00:05<00:00, 429330.56it/s]\u001b[A\n",
+      " 96%|█████████▋| 1589248/1648877 [00:05<00:00, 505018.24it/s]\u001b[A\n",
+      "1654784it [00:05, 459633.06it/s]                             \u001b[A\n",
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "  0%|          | 0/4542 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "\n",
+      "8192it [00:00, 13810.36it/s]            \u001b[A\u001b[A"
      ]
     }
    ],
@@ -309,10 +371,10 @@
     "        train_loss += loss.data[0]\n",
     "        \n",
     "        if batch_id % 100 == 0:\n",
-    "            print \"train accuracy:\", sum(np.argmax(masked.data.cpu().numpy(), 1) == \n",
-    "                                   np.argmax(target.data.cpu().numpy(), 1)) / float(batch_size)\n",
+    "            print (\"train accuracy:\", sum(np.argmax(masked.data.cpu().numpy(), 1) == \n",
+    "                                   np.argmax(target.data.cpu().numpy(), 1)) / float(batch_size))\n",
     "        \n",
-    "    print train_loss / len(mnist.train_loader)\n",
+    "    print (train_loss / len(mnist.train_loader))\n",
     "        \n",
     "    capsule_net.eval()\n",
     "    test_loss = 0\n",
@@ -330,18 +392,16 @@
     "        test_loss += loss.data[0]\n",
     "        \n",
     "        if batch_id % 100 == 0:\n",
-    "            print \"test accuracy:\", sum(np.argmax(masked.data.cpu().numpy(), 1) == \n",
-    "                                   np.argmax(target.data.cpu().numpy(), 1)) / float(batch_size)\n",
+    "            print (\"test accuracy:\", sum(np.argmax(masked.data.cpu().numpy(), 1) == \n",
+    "                                   np.argmax(target.data.cpu().numpy(), 1)) / float(batch_size))\n",
     "    \n",
-    "    print test_loss / len(mnist.test_loader)"
+    "    print (test_loss / len(mnist.test_loader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
@@ -361,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -383,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -414,21 +470,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
