--- a/micro_cal/GoogleLeNet/Untitled.ipynb
+++ b/micro_cal/GoogleLeNet/Untitled.ipynb
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      "147857408/170498071 [=========================>....] - ETA: 24s"
+      "170500096/170498071 [==============================] - 178s 1us/step\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='AlexNet_Summary_Table.jpg',width=800, height=400)"
+    "Image(filename='summ',width=800, height=400)"
    ]
   },
   {
