--- a/micro_cal/GoogleLeNet/Googlenet not finished.ipynb
+++ b/micro_cal/GoogleLeNet/Googlenet not finished.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='summ',width=800, height=400)"
+    "Image(filename='summary.jpg',width=800, height=400)"
    ]
   },
   {
